fleet/comfyui/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comfyui
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: comfyui
      app.kubernetes.io/name: comfyui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: comfyui
        app.kubernetes.io/name: comfyui
    spec:
      containers:
        - image: registry.lab.suse/library/comfyui/comfyui:1.0.4
          imagePullPolicy: IfNotPresent
          lifecycle:
            postStart:
              exec:
                command:
                  - /ComfyUI/init.sh
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: comfyui
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 6
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
            requests:
              memory: "4Gi"
              cpu: "500m"
              nvidia.com/gpu: "1"
              nvidia.com/gpucores: 0
              nvidia.com/gpumem: 0
            limits:
              memory: "8Gi"
              cpu: "4"
              nvidia.com/gpu: "1"
              nvidia.com/gpucores: 100
              nvidia.com/gpumem: "8Gi"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /ComfyUI/models/
              name: comfyui-models
            - name: models
              mountPath: /ComfyUI/models.list
              subPath: models.list
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      # runtimeClassName: nvidia
      terminationGracePeriodSeconds: 30
      tolerations:
        - effect: NoSchedule
          key: nvidia.com/gpu
          operator: Exists
      volumes:
        - name: comfyui-models
          persistentVolumeClaim:
            claimName: comfyui-models
        - name: models
          configMap:
            name: models
